Change greeting from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <div class="menu-grid">
                         <div class="menu-card reveal">
                             <div class="card-image">
-                                <img src="images/ca.jpg" alt="Cappuccino">
+                                <img src="ca.jpg" alt="Cappuccino">
                                 <div class="card-overlay">
                                     <span class="price">৳ 220</span>
                                 </div>
@@ -139,7 +139,7 @@
                         </div>
                         <div class="menu-card reveal">
                             <div class="card-image">
-                                <img src="images/la.jpg" alt="Latte Art">
+                                <img src="la.jpg" alt="Latte Art">
                                 <div class="card-overlay">
                                     <span class="price">৳ 250</span>
                                 </div>
@@ -151,7 +151,7 @@
                         </div>
                         <div class="menu-card reveal">
                             <div class="card-image">
-                                <img src="images/ice.jpg" alt="Cold Coffee">
+                                <img src="ice.jpg" alt="Cold Coffee">
                                 <div class="card-overlay">
                                     <span class="price">৳ 280</span>
                                 </div>
@@ -163,7 +163,7 @@
                         </div>
                         <div class="menu-card reveal">
                             <div class="card-image">
-                                <img src="images/tea.jpg" alt="Bangladeshi Tea">
+                                <img src="tea.jpg" alt="Bangladeshi Tea">
                                 <div class="card-overlay">
                                     <span class="price">৳ 120</span>
                                 </div>
@@ -204,7 +204,7 @@
                         </div>
                         <div class="menu-card reveal">
                             <div class="card-image">
-                                <img src="images/ch.jpg" alt="Chicken Wings">
+                                <img src="ch.jpg" alt="Chicken Wings">
                                 <div class="card-overlay">
                                     <span class="price">৳ 550</span>
                                 </div>
@@ -216,7 +216,7 @@
                         </div>
                         <div class="menu-card reveal">
                             <div class="card-image">
-                                <img src="images/fr.jpg" alt="Fries">
+                                <img src="fr.jpg" alt="Fries">
                                 <div class="card-overlay">
                                     <span class="price">৳ 250</span>
                                 </div>
@@ -257,7 +257,7 @@
                         </div>
                         <div class="menu-card reveal">
                             <div class="card-image">
-                                <img src="images/cream.jpg" alt="Ice Cream">
+                                <img src="cream.jpg" alt="Ice Cream">
                                 <div class="card-overlay">
                                     <span class="price">৳ 280</span>
                                 </div>
@@ -458,4 +458,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
