Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -379,25 +379,25 @@
             </div>
             <div class="gallery-grid">
                 <div class="gallery-item reveal">
-                    <img src="images/food.jpg" alt="Food 1">
+                    <img src="food.jpg" alt="Food 1">
                     <div class="gallery-overlay">
                         <h4>Signature Dish</h4>
                     </div>
                 </div>
                 <div class="gallery-item reveal">
-                    <img src="images/salad.jpg" alt="Food 2">
+                    <img src="salad.jpg" alt="Food 2">
                     <div class="gallery-overlay">
                         <h4>Fresh Salad</h4>
                     </div>
                 </div>
                 <div class="gallery-item reveal">
-                    <img src="images/gr.jpg" alt="Food 3">
+                    <img src="gr.jpg" alt="Food 3">
                     <div class="gallery-overlay">
                         <h4>Gourmet Platter</h4>
                     </div>
                 </div>
                 <div class="gallery-item reveal">
-                    <img src="images/dr.jpg" alt="Food 4">
+                    <img src="dr.jpg" alt="Food 4">
                     <div class="gallery-overlay">
                         <h4>Dessert Table</h4>
                     </div>
@@ -460,3 +460,4 @@
 </body>
 
 </html>
+
