Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 Dine Dhaka. All rights reserved. | Designed & Developed by Venture IT</p>
+                <p>&copy; 2023 Dine Dhaka. All rights reserved. | Designed & Developed by <a href="https://ventureit.tech/">Venture IT</a></p>
             </div>
         </div>
     </footer>
@@ -460,4 +460,5 @@
 </body>
 
 </html>
+
 
